--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "service-smtp",
+  "name": "@kronos-integration/service-smtp",
   "version": "0.0.0-semantic-release",
   "publishConfig": {
     "access": "public"
   },
   "sideEffects": false,
   "type": "module",
+  "main": "./src/service-smtp.mjs",
   "exports": {
-    ".": "{{main}}"
+    ".": "./src/service-smtp.mjs"
   },
   "description": "SMTP for kronos",
   "keywords": [
@@ -24,15 +25,15 @@
     "cover": "--overwrite-- c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "test": "npm run test:ava",
     "test:ava": "ava --timeout 2m tests/*.mjs",
-    "docs": "documentation readme {{main}} --section=API",
+    "docs": "documentation readme ./src/service-smtp.mjs --section=API",
     "lint": "npm run lint:docs",
-    "lint:docs": "documentation lint {{main}}"
+    "lint:docs": "documentation lint ./src/service-smtp.mjs"
   },
   "devDependencies": {
-    "semantic-release": "^17.3.0",
-    "c8": "^7.3.5",
     "ava": "^3.13.0",
-    "documentation": "github:arlac77/documentation"
+    "c8": "^7.3.5",
+    "documentation": "github:arlac77/documentation",
+    "semantic-release": "^17.3.0"
   },
   "engines": {
     "node": ">=14.15.1"
@@ -50,5 +51,10 @@
       "arlac77/template-github-action",
       "arlac77/template-kronos-component"
     ]
+  },
+  "dependencies": {
+    "@kronos-integration/service": "^9.2.27",
+    "model-attributes": "^4.1.7",
+    "smtp-client": "^0.3.3"
   }
 }
