chore(scripts): add c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp (scripts.cover)

--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   ],
   "license": "BSD-2-Clause",
   "scripts": {
-    "cover": "--overwrite-- c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "test": "npm run test:ava",
     "test:ava": "ava --timeout 2m tests/*.mjs",
+    "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme ./src/service-smtp.mjs --section=API",
     "lint": "npm run lint:docs",
     "lint:docs": "documentation lint ./src/service-smtp.mjs"
+  },
+  "dependencies": {
+    "@kronos-integration/service": "^9.2.27",
+    "model-attributes": "^4.1.7",
+    "smtp-client": "^0.3.3"
   },
   "devDependencies": {
     "ava": "^3.13.0",
@@ -51,10 +56,5 @@
       "arlac77/template-github-action",
       "arlac77/template-kronos-component"
     ]
-  },
-  "dependencies": {
-    "@kronos-integration/service": "^9.2.27",
-    "model-attributes": "^4.1.7",
-    "smtp-client": "^0.3.3"
   }
 }
