--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@kronos-integration/service-smtp",
   "version": "0.0.0-semantic-release",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "exports": {
     ".": "./src/service-smtp.mjs"
