--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Kronos-Integration/service-smtp"
+    "url": "git+https://github.com/Kronos-Integration/service-smtp.git"
   },
   "bugs": {
     "url": "https://github.com/Kronos-Integration/service-smtp/issues"
