--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
   },
   "dependencies": {
     "@kronos-integration/endpoint": "^10.0.3",
-    "@kronos-integration/service": "^12.0.3",
-    "model-attributes": "^4.3.0",
+    "@kronos-integration/service": "^12.0.4",
+    "pacc": "^3.6.7",
     "smtp-client": "^0.4.0"
   },
   "devDependencies": {
-    "ava": "^6.1.3",
-    "c8": "^10.1.2",
+    "ava": "^6.4.1",
+    "c8": "^10.1.3",
     "documentation": "^14.0.3",
-    "semantic-release": "^24.1.2"
+    "semantic-release": "^24.2.7"
   },
   "engines": {
-    "node": ">=22.11.0"
+    "node": ">=22.17.1"
   },
   "repository": {
     "type": "git",
